Bugfix: Set body overflow-x:hidden (to hide off canvas menu).

--- a/less/kbOpenCms/navbar.less
+++ b/less/kbOpenCms/navbar.less
@@ -665,6 +665,9 @@
     right:0;
     transition:right 300ms ease-in-out;
 }
+body{
+    overflow-x:hidden;
+}
 body.showMenu #kbCanvasContainer{
     right:90%;
 }
